--- a/templates/dishes/dish_delete_confirm.html
+++ b/templates/dishes/dish_delete_confirm.html
@@ -36,9 +36,10 @@
         {% endif %}
     </li>
 </ul>
-<form action="{{url_for('delete_dish',id=dish.id)}}" method="POST">
+<form action="{{url_for('dishes.delete_dish',id=dish.id)}}" method="POST">
     <button type="submit" class="waves-effect waves-light blue btn-small">Accept</button>
-    <a href="{{url_for('manage_categories')}}" class="waves-effect waves-light blue btn-small">No , back to category</a>
+    <a href="{{url_for('categories.manage_categories')}}" class="waves-effect waves-light blue btn-small">No , back to
+        category</a>
     <a href="{{url_for('main_page')}}" class="waves-effect waves-light btn-small blue right">Back to Main</a>
 </form>
 {% endblock %}
