--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -18,8 +18,8 @@
 </p>
 <div class="center">
     <h5>To continue to the site please choose one of the following</h5>
-    <a href="{{url_for('login')}}" class="waves-effect waves-light btn small-margin-right">Login Now!</a>
-    <a href="{{url_for('new_signup')}}" class="waves-effect waves-light blue btn dish_list">Signup Now! </a>
+    <a href="{{url_for('users.login')}}" class="waves-effect waves-light btn small-margin-right">Login Now!</a>
+    <a href="{{url_for('users.new_signup')}}" class="waves-effect waves-light blue btn dish_list">Signup Now! </a>
 </div>
 <br>
 <img src="https://rddmag.com/images/2019/09/form_function-evviva-1.jpg" alt="" style="width:1100px;height:450px">
