--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -28,7 +28,7 @@
 <h6 class="bold">Please fill the following details to log into the website : </h6>
 <br>
 <div class="row">
-    <form class="col s12" action="{{url_for('login')}}" method="POST">
+    <form class="col s12" action="{{url_for('users.login')}}" method="POST">
         <div class="row">
             <div class="input-field col s12">
                 <input placeholder="Username" id="user_name" type="text" name="username">
