--- a/templates/categories/create_category.html
+++ b/templates/categories/create_category.html
@@ -3,13 +3,14 @@
 <br>
 <div dir="rtl">
     <div class="center">
-        <a href="{{url_for ('manage_deliveries')}}" class="waves-effect waves-light grey darken-1 btn-small">All
+        <a href="{{url_for ('deliveries.manage_deliveries')}}"
+            class="waves-effect waves-light grey darken-1 btn-small">All
             Deliveries
         </a>
         <a href="{{url_for ('main_page') }}" class="waves-effect waves-light grey darken-1 btn-small right">Back to main
             page
         </a>
-        <a href="{{url_for ('manage_dishes')}}"
+        <a href="{{url_for ('dishes.manage_dishes')}}"
             class="waves-effect waves-light grey darken-1 btn-small left a-bit-margin">All Dishes
         </a>
     </div>
@@ -20,7 +21,7 @@
 </div>
 <br>
 <div class="row">
-    <form class="col s12" action="{{url_for ('create_category')}}" method="POST">
+    <form class="col s12" action="{{url_for ('categories.create_category')}}" method="POST">
         <br>
         <div class="row">
             <div class="input-field col s12">
@@ -36,7 +37,7 @@
         </div>
         <br>
         <button type="submit" class="waves-effect waves-light btn-small">Accept</button>
-        <a href="{{url_for('manage_categories')}}" class="waves-effect waves-light btn-small">No , back to
+        <a href="{{url_for('categories.manage_categories')}}" class="waves-effect waves-light btn-small">No , back to
             categories</a>
         <a href="{{url_for('main_page')}}" class="waves-effect waves-light btn-small right">Back to Main</a>
         <div class="centerize bigger-text">Staff member</div>
