--- a/templates/categories/manage_categories.html
+++ b/templates/categories/manage_categories.html
@@ -3,13 +3,14 @@
 <br>
 <div dir="rtl">
     <div class="center">
-        <a href="{{url_for ('manage_deliveries')}}" class="waves-effect waves-light grey darken-1 btn-small">All
+        <a href="{{url_for ('deliveries.manage_deliveries')}}"
+            class="waves-effect waves-light grey darken-1 btn-small">All
             Deliveries
         </a>
         <a href="{{url_for ('main_page') }}" class="waves-effect waves-light grey darken-1 btn-small right">Back to main
             page
         </a>
-        <a href="{{url_for ('manage_dishes')}}"
+        <a href="{{url_for ('dishes.manage_dishes')}}"
             class="waves-effect waves-light grey darken-1 btn-small left a-bit-margin">All Dishes
         </a>
     </div>
@@ -40,7 +41,8 @@
     <h5>In this page you can : see , edit , create and delete categories</h5>
 </div>
 <div class="center">
-    <a href="{{url_for ('create_category')}}" class="waves-effect waves-light btn-small green">Add a new category</a>
+    <a href="{{url_for ('categories.create_category')}}" class="waves-effect waves-light btn-small green">Add a new
+        category</a>
 </div>
 <ul class="collection with-header">
     {% for category in categories %}
@@ -56,15 +58,15 @@
         <div class="dish_list">There are no dishes in this category yet</div>
         {% endif %}
         <br>
-        <a href="{{url_for('delete_category',id=category.id)}}" class="btn-small red darken-2" name="category_id"
-            value="{{category.id}}">
+        <a href="{{url_for('categories.delete_category',id=category.id)}}" class="btn-small red darken-2"
+            name="category_id" value="{{category.id}}">
             Delete category<i class="material-icons left icons_staff">
                 <img src="{{url_for('static',filename='images/delete_icon.png')}}" alt="Delete category"
                     class="dish-icons cart-icon">
             </i>
         </a>
-        <a href="{{url_for('edit_category',id=category.id)}}" class="btn-small orange darken-2" name="category_id"
-            value="{{category.id}}">
+        <a href="{{url_for('categories.edit_category',id=category.id)}}" class="btn-small orange darken-2"
+            name="category_id" value="{{category.id}}">
             edit category<i class="material-icons left icons_staff">
                 <img src="{{url_for('static',filename='images/edit_icon.png')}}" alt="Delete category"
                     class="dish-icons cart-icon">
