--- a/templates/deliveries/one_delivery.html
+++ b/templates/deliveries/one_delivery.html
@@ -2,7 +2,7 @@
 {% block content %}
 <br>
 <div dir="rtl">
-    <a class="waves-effect waves-light btn-small" href="{{url_for('show_user')}}">Go to user overview</a>
+    <a class="waves-effect waves-light btn-small" href="{{url_for('users.show_user')}}">Go to user overview</a>
 </div>
 
 {% with success = get_flashed_messages(category_filter=['success']) %}
