--- a/templates/dishes/edit_dish.html
+++ b/templates/dishes/edit_dish.html
@@ -10,84 +10,79 @@
 {% endfor %}
 {% endif %}
 {% endwith %}
-<br>
-<div dir="rtl">
-    <div class="center">
-        <a href="{{url_for ('manage_deliveries')}}" class="waves-effect waves-light grey darken-1 btn-small">All
-            Deliveries</a>
-        <a href="{{url_for ('main_page') }}" class="waves-effect waves-light grey darken-1 btn-small right">Back to main
-            page</a>
-        <a href="{{url_for ('manage_categories')}}" class="waves-effect waves-light grey darken-1 btn-small left">All
-            Categories</a>
-    </div>
-</div>
 
 <div class="center">
-    <h5>Welcome staff member</h5>
-    <h6 class="bold">To add a new dish in this page please enter the following details : </h6>
+    <h4>Welcome staff member</h4>
+    <h5>Now editing the <span class="bold">{{dish.dish_name}}</span> dish :</h5>
 </div>
 <div class="row">
-    <form class="col s12" action="{{url_for ('create_dish')}}" method="POST">
+    <form class="col s12" action="{{url_for ('dishes.edit_dish',id=dish.id)}}" method="POST">
         <div class="row">
             <div class="input-field col s12">
                 <div class="bold small-margin">The current category :</div>
                 <select class="browser-default" name="category_dish">
-                    <option value="" disabled selected>Category name</option>
                     {% for category in categories %}
-                    <option value="{{category.id}}">{{category.category_name}}</option>
+                    {% if category == dish.category %}
+                    <option value="{{category.id}}" selected>{{category.category_name|title}}</option>
+                    {% else %}
+                    <option value="{{category.id}}">{{category.category_name|title}}</option>
+                    {% endif %}
                     {% endfor %}
                 </select>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="Dish name" id="dish_name" type="text" class="validate" name="dish_name"
-                        required>
+                        value="{{dish.dish_name}}" required>
                     <label for="dish_name" class="bigger-text black-text">Dish name :</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="Price" id="price" type="number" step="0.5" class="validate" name="price"
-                        required>
+                        value="{{dish.price}}" required>
                     <label for="price" class="bigger-text black-text">Price :</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="Description" id="description" type="text" class="validate" name="description"
-                        required>
+                        value="{{dish.description}}" required>
                     <label for="description" class="bigger-text black-text">Description :</label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row ">
                 <div class="input-field col s12">
-                    <input placeholder="image URL" id="image_url" type="text" class="validate" name="image_url"
-                        required>
-                    <label for="image_url" class="bigger-text black-text">Image URL :</label>
+                    <input placeholder="image URL" id="imageURL" type="text" class="validate" name="image_URL"
+                        value="{{dish.imageURL}}" required>
+                    <label for="imageURL" class="bigger-text black-text">Image URL :</label>
                 </div>
+            </div>
+            <div>
+                <img src="{{dish.imageURL}}" alt="Dish image" style="width:175px;height:175px">
             </div>
             <p>
                 <label>
-                    <input type="checkbox" name="is_gluten_free" />
+                    <input type="checkbox" name="is_gluten_free" {% if dish.is_gluten_free %} checked {% endif %} />
                     <span class="black-text bold">Is it gluten free?</span>
                 </label>
             </p>
             <p>
                 <label>
-                    <input type="checkbox" name="is_vegetarian" />
+                    <input type="checkbox" name="is_vegetarian" {% if dish.is_vegeterian %} checked {% endif %} />
                     <span class="black-text bold">Is it vegetarian?</span>
                 </label>
             </p>
             <button type="submit" class="waves-effect waves-light btn-small">Accept</button>
-            <a href="{{url_for('manage_dishes')}}" class="waves-effect waves-light btn-small">No , back to
+            <a href="{{url_for('dishes.manage_dishes')}}" class="waves-effect waves-light btn-small">No , back to
                 dishes</a>
             <a href="{{url_for('main_page')}}" class="waves-effect waves-light btn-small right">Back to Main</a>
         </div>
         <div class="centerize bigger-text">Staff member</div>
-        <p class="bold">1. Please remember to add dishes with care and good quality pictures as it affects the
+        <p class="bold">1. Please remember to add categories with care and good quality pictures as it affects the
             restaurant's
             sales.</p>
-        <p class="bold">2. Please spell check the names of the dishes before the adding.</p>
+        <p class="bold">2. Please spell check the names of the categories before the adding.</p>
     </form>
 </div>
 {% endblock %}
