--- a/templates/dishes/manage_dishes.html
+++ b/templates/dishes/manage_dishes.html
@@ -3,11 +3,13 @@
 <br>
 <div dir="rtl">
     <div class="center">
-        <a href="{{url_for ('manage_deliveries')}}" class="waves-effect waves-light grey darken-1 btn-small">All
+        <a href="{{url_for ('deliveries.manage_deliveries')}}"
+            class="waves-effect waves-light grey darken-1 btn-small">All
             Deliveries</a>
         <a href="{{url_for ('main_page') }}" class="waves-effect waves-light grey darken-1 btn-small right">Back to main
             page</a>
-        <a href="{{url_for ('manage_categories')}}" class="waves-effect waves-light grey darken-1 btn-small left">All
+        <a href="{{url_for ('categories.manage_categories')}}"
+            class="waves-effect waves-light grey darken-1 btn-small left">All
             Categories</a>
     </div>
 </div>
@@ -24,7 +26,7 @@
 <div class="center">
     <h4>Welcome staff member</h4>
     <h5>In this page you can : see , edit , create and delete dishes</h5>
-    <a href="{{url_for ('create_dish')}}" class="waves-effect waves-light btn-small green">Add a new dish</a>
+    <a href="{{url_for ('dishes.create_dish')}}" class="waves-effect waves-light btn-small green">Add a new dish</a>
 </div>
 <div class="center"> </div>
 <ul class="collection">
@@ -37,7 +39,7 @@
             <span class="bold">Description </span>: {{dish.description}} <br>
         </p>
         <br>
-        <a href="{{url_for ('delete_dish',id=dish.id)}}" class="btn-small red darken-2" name="dish_id"
+        <a href="{{url_for ('dishes.delete_dish',id=dish.id)}}" class="btn-small red darken-2" name="dish_id"
             value="{{dish.id}}">
             Delete dish
             <i class="material-icons left icons_staff">
@@ -45,7 +47,7 @@
                     class="dish-icons cart-icon">
             </i>
         </a>
-        <a href="{{url_for ('edit_dish',id=dish.id)}}" class="btn-small orange darken-2" name="dish_id"
+        <a href="{{url_for ('dishes.edit_dish',id=dish.id)}}" class="btn-small orange darken-2" name="dish_id"
             value="{{dish.id}}">
             edit dish
             <i class="material-icons left icons_staff">
