--- a/templates/users/order_history.html
+++ b/templates/users/order_history.html
@@ -2,8 +2,9 @@
 {% block content %}
 <br>
 <div class="center">
-    <a href="{{url_for('show_user')}}" class="btn waves-effect waves-light btn-small right">Back to user</a>
-    <a href="{{url_for('all_dishes')}}" class="waves-effect waves-light btn-small center" style="margin-left:100px">To
+    <a href="{{url_for('users.show_user')}}" class="btn waves-effect waves-light btn-small right">Back to user</a>
+    <a href="{{url_for('dishes.all_dishes')}}" class="waves-effect waves-light btn-small center"
+        style="margin-left:100px">To
         all
         dishes</a>
 </div>
