--- a/templates/carts/one_cart.html
+++ b/templates/carts/one_cart.html
@@ -93,15 +93,16 @@
             <div class="input-field col s6">
                 <input placeholder="Delivery Address" id="delivery_address" type="text" class="validate" required
                     name="delivery_address">
-                <label for="delivery_address">Delivery Address : </label>
+                <label for="delivery_address" class="bigger-text black-text">Delivery Address : </label>
             </div>
             <div class="input-field col s6">
-                <input id="Phone_number" type="text" class="validate" required name="phone_number">
-                <label for="Phone_number">Phone Number</label>
+                <input placeholder="Phone Number" id="Phone_number" type="text" class="validate" required
+                    name="phone_number">
+                <label for="Phone_number" class="bigger-text black-text">Phone Number</label>
             </div>
             <div class="input-field col s12">
-                <input id="comments" type="text" class="validate" name="comments">
-                <label for="comments">Comments</label>
+                <input placeholder="Comments" id="comments" type="text" class="validate" name="comments">
+                <label for="comments" class="bigger-text black-text">Comments</label>
                 <div class="red-text">Disclaimer : an order can only be changed by calling the business and only 15
                     minutes after placing the order.</div>
             </div>
