--- a/templates/users/main_page_auth.html
+++ b/templates/users/main_page_auth.html
@@ -29,21 +29,21 @@
 <br>
 <strong>There is a list of things you are able to do as a staff member :</strong>
 <ul class="collection">
-    <li class="collection-item">1. Manage deliveries : check done deliveries and change their status.
+    <li class="collection-item bold">1. Manage deliveries : check done deliveries and change their status.
         <div class="center small-margin-top">
             <a href="{{url_for ('deliveries.manage_deliveries') }}"
                 class="waves-effect waves-light blue darken-1 btn-small">All
                 Deliveries</a>
         </div>
     </li>
-    <li class="collection-item">2. Manage food categories : delete , add and chang the site's categories.
+    <li class="collection-item bold">2. Manage food categories : delete , add and chang the site's categories.
         <div class="center small-margin-top">
             <a href="{{url_for ('categories.manage_categories') }}"
                 class="waves-effect waves-light blue darken-1 btn-small">All
                 Categories</a>
         </div>
     </li>
-    <li class="collection-item">3. Manage dishes : delete , add and change the site's dishes.
+    <li class="collection-item bold">3. Manage dishes : delete , add and change the site's dishes.
         <div class="center small-margin-top">
             <a href="{{url_for ('dishes.manage_dishes') }}" class="waves-effect waves-light blue darken-1 btn-small">All
                 Dishes</a>
