small change with delete icon

--- a/templates/categories/manage_categories.html
+++ b/templates/categories/manage_categories.html
@@ -61,7 +61,7 @@
         <a href="{{url_for('categories.delete_category',id=category.id)}}" class="btn-small red darken-2"
             name="category_id" value="{{category.id}}">
             Delete category<i class="material-icons left icons_staff">
-                <img src="{{url_for('static',filename='images/delete_icon.png')}}" alt="Delete category"
+                <img src="{{url_for('static',filename='images/delete_Icon.png')}}" alt="Delete category"
                     class="dish-icons cart-icon">
             </i>
         </a>
