small delete icon change

--- a/templates/dishes/manage_dishes.html
+++ b/templates/dishes/manage_dishes.html
@@ -43,7 +43,7 @@
             value="{{dish.id}}">
             Delete dish
             <i class="material-icons left icons_staff">
-                <img src="{{url_for('static',filename='images/delete_icon.png')}}" alt="Delete dish"
+                <img src="{{url_for('static',filename='images/delete_Icon.png')}}" alt="Delete dish"
                     class="dish-icons cart-icon">
             </i>
         </a>
